# husky_at_cimatec

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz  config_no_aloam.rviz  localization.yaml  teleop.yaml  twist_mux.yaml
launch/: aloam.husky.launch  cbd.husky.launch  control.husky.launch  develop.husky.launch  exploration.husky.launch  gmapping.husky.launch  husky.husky.launch  loam.husky.launch  move_base.husky.launch  my_precious.husky.launch  nav2d.husky.launch  pc2ls.husky.launch  psd.husky.launch  rviz.husky.launch  spawn.husky.launch  teleop.husky.launch
param/: costmap.yaml  navigator.yaml
src/: control.cpp  control2.cpp  control_.cpp
urdf/: GenericCamera.xacro  addons.husky.xacro  camera.husky.xacro  velodyne.husky.xacro  velodyned.husky.xacro
