<?xml version="1.0"?>
<package format="2">
  <name>husky</name>
  <version>0.0.0</version>
  <description>Husky at cimatec</description>

  <maintainer email="pedro.tecchio@fbter.org.br">Pedro Tecchio</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <exec_depend>gazebo</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>nav2d_navigator</build_depend>
  <build_export_depend>nav2d_navigator</build_export_depend>
  <exec_depend>nav2d_navigator</exec_depend>

  <export>

  </export>
</package>